--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "exif": "^0.6.0",
     "fs-extra": "^10.1.0",
     "moment": "^2.29.2",
+    "moment-timezone": "^0.5.38",
     "mqtt": "^4.3.7",
     "nanoid": "^3.3.2",
     "node-localdb": "0.0.3",
